# compiler flags
CFLAGS = -Wall -c -g 
CXXFLAGS = -Wall -c -g 
AM_LDFLAGS =

# lists f binaries to produce
bin_PROGRAMS = character node_types qname sequence_type base_types xs_primitive_types

character_SOURCES = character.h character.cpp
node_types_SOURCES = node_types.h node_types.cpp
qname_SOURCES = qname.h qname.cpp
sequence_type_SOURCES = sequence_type.h sequence_type.cpp
base_types_SOURCES = types.h types.cpp
xs_primitive_types_SOURCES = xs_primitive_types.h xs_primitive_types.cpp

