# compiler flags
CFLAGS = -Wall -c -g 
CXXFLAGS = -Wall -c -g 
AM_LDFLAGS =

# lists f binaries to produce
bin_PROGRAMS = URI file fxcharheap mmfile rwlock tokenbuf

URI_SOURCES = URI.h URI.cpp
file_SOURCES = file.h file.cpp
fxcharheap_SOURCES = fxcharheap.h fxcharheap.cpp
mmfile_SOURCES = mmfile.h mmfile.cpp
rwlock_SOURCES = rwlock.h rwlock.cpp
tokenbuf_SOURCES = tokenbuf.h tokenbuf.cpp

